--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 <body>
     <header id="body-header">
-
+        <nav>
+            <ul class="horizontal-list text-center">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#experience">Experience</a>
+                </li>
+                <li>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="about">
