--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hitansh Gupta</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e335767a87.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="body-header">
@@ -31,6 +32,37 @@
                 </li>
             </ul>
         </nav>
+        <div id="name-social-container">
+            <div class="text-center">
+                <h1 id="my-name">
+                    Hitansh Gupta
+                </h1>
+                <div>
+                    <ul class="horizontal-list text-center social-icons">
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <section id="about">
