--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
     </header>
     <main>
         <section id="about">
-            
+            <div id="my-image">
+                <img src="pic1.jpeg">
+            </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate fuga pariatur, accusantium fugiat <b>reprehenderit</b> . Maxime quibusdam recusandae doloremque voluptatum optio ullam provident eos quo omnis,  eius quaerat nam fuga rerum culpa earum  <b>molestias amet dicta</b> magni quae natus.</p>
         </section>
         <section id="skills">
             
