--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate fuga pariatur, accusantium fugiat <b>reprehenderit</b> . Maxime quibusdam recusandae doloremque voluptatum optio ullam provident eos quo omnis,  eius quaerat nam fuga rerum culpa earum  <b>molestias amet dicta</b> magni quae natus.</p>
         </section>
         <section id="skills">
-            
+            <h1 class="section-heading mb75px">
+                <span>
+                    <i class="fa-solid fa-person-chalkboard"></i>
+                </span>
+                <span>SKILLS</span>
+            </h1>
+            <div class="skills-display">
+                <div class="skill-progress"></div>
+            </div>
         </section>
         <section id="experience">
             
