--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div id="name-social-container">
             <div class="text-center">
-                <h1 id="my-name">My Name</h1>
+                <h1 id="my-name">Hitansh Gupta</h1>
             </div>
             <div>
                 <ul class="horizontal-list text-center social-icons">
@@ -79,13 +79,14 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg">
+                <img src="pic1.jpeg">
             </div>
 
             <div id="about-para">
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and <span class="text-highlight">typesetting industry</span>. Lorem Ipsum has been the industry's standard <span class="text-highlight">dummy text ever</span> since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s <span class="text-highlight">with the release of Letraset</span> sheets containing Lorem Ipsum.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, fugiat.<span class="text-highlight">tlorem5
+                    </span>. Lorem ipsum dolor sit amet.<span class="text-highlight">dummy text ever</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illum officia earum quibusdam ullam necessitatibus! <span class="text-highlight">Lorem, ipsum dolor.</span> sheets containing Lorem Ipsum.
                 </p>
 
             </div>
@@ -293,11 +294,11 @@
                     </div>
                     <div class="my-details-info-container">
                         <i class="fas fa-mobile-alt"></i>
-                        <span>9999999999</span>
+                        <span>9871412379</span>
                     </div>
                     <div class="my-details-info-container">
                         <i class="far fa-envelope"></i>
-                        <span>myemail@gmail.com</span>
+                        <span>hitanshgupta007@gmail.com</span>
                     </div>
                 </div>
             </div>
