--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Name</title>
+    <title>Hitansh Gupta</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -71,7 +71,7 @@
 
         <div id="name-social-container">
             <div class="text-center">
-                <h1 id="my-name">My Name</h1>
+                <h1 id="my-name">Hitansh Gupta</h1>
             </div>
             <div>
                 <ul class="no-list-style horizontal-list text-center social-icons">
@@ -111,7 +111,7 @@
 
         <section id="about">
             <div id="my-image">
-                <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg">
+                <img src="pic1.jpeg">
             </div>
 
             <div id="about-para">
